--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -803,3 +803,118 @@ figcaption a {
   font-family: 'Ubuntu', sans-serif;
   cursor: pointer;
 }
+
+/* Schedule JS */
+
+.tables-container {
+  /* putting contents of table side-by-side */
+  display: flex;
+  justify-content: space-around;
+}
+
+.backgroundSchedule {
+  background-color: rgba(0, 177, 196, 0.1);
+  border-radius: 10px;
+  width:45%;
+}
+
+table {
+  /* background color opacity changed but text of table remains visible */
+  opacity: 1; 
+  margin-left: 50px;
+  margin-bottom: 10px; 
+}
+
+.locationEvent{
+  font-size: 12px;
+  color: purple;
+}
+
+.presenter {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.time {
+  padding-right: 60px;
+}
+
+.eventDescription{
+  padding-right: 40px;
+  padding-bottom: 5px;
+}
+
+th {
+  padding-bottom: 10px;
+}
+
+.entire-schedule {
+  /*
+  background-color: rgba(0, 177, 196, 0.1);
+  border-radius: 10px;
+  margin-bottom: 100px;
+  margin-left: 30px;
+  width: 75%;
+  padding: 3px 40px 3px;
+  */
+}
+
+.content-all {
+  padding: 20px;
+  /* background-color: red; */
+  border-bottom: 5px black solid;
+  border-left: 5px black solid;
+  border-right: 5px black solid;
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tab {
+  font-size: 20px;
+  padding: 10px;
+  flex-grow: 1;
+  border-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.tab.active {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top: 5px black solid;
+  border-left: 5px black solid;
+  border-right: 5px black solid;
+  border-bottom: 0px black solid;
+}
+
+.tab:nth-child(1):hover,
+.tab:nth-child(1).active {
+  background-color: red;
+}
+
+.tab:nth-child(2):hover,
+.tab:nth-child(2).active {
+  background-color: blue;
+}
+
+.tab:nth-child(3):hover,
+.tab:nth-child(3).active {
+  background-color: green;
+}
+
+/* Apply styles to content corresponding to active tab */
+.tab:nth-child(1).active ~ .content:nth-child(1)
+ {
+  background-color: red; /* Change to desired color */
+}
+
+.tab:nth-child(2).active ~ .content:nth-child(2) {
+  background-color: blue; /* Change to desired color */
+}
+
+.tab:nth-child(3).active ~ .content:nth-child(3) {
+  background-color: green; /* Change to desired color */
+}
