--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -1,3 +1,52 @@
+@media only screen and (max-width: 430px) {
+  .login-container {
+    .form-container {
+      .loginBubbles {
+        font-weight: 500;
+        font-size: 10px;
+      }
+    }
+  }
+
+  figure:hover{
+    border: 0.5em solid #712020;
+    img {
+      opacity: 0.1;
+      transition: all .2s ease-in-out .2s;
+    }
+    figcaption {
+      top: 50%;
+      margin-top: -5em;
+      font-size: 0.8rem;
+    }
+  
+    h3  {
+      font-size: 0.7rem;
+    }
+    h4 {
+      font-size: 0.5rem;
+    }
+  }
+
+  figcaption a {
+    border-radius: 1.25rem;
+    padding-top: 0.5em;
+    width: 90%;
+    height: 1.5rem;
+  }
+
+  .countdown-text {
+    font-size: 16px;
+  }
+
+  .countdown-item {
+    font-size: 16px;
+  }
+  .countdown-label {
+    font-size: 12px;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   .app {
     min-height: 100vh;
@@ -33,12 +82,206 @@
         margin-right: auto;
       }
     }
+  }
+
+  .countdown-text {
+    font-size: 18px;
+  }
+
+  .countdown-item {
+    font-size: 18px;
+  }
+  .countdown-label {
+    font-size: 12px;
+  }
+
+  .footer-container {
   
+    .footer-content {
+      grid-template-columns: 2fr 1fr 5fr;
+      .image {
+        height: 6vh;
+        align-self: center;
+      }
+    }  
+    .socials {
+      column-gap: 0.25rem;
+    }
+    .socials .icons {
+      font-size: 1.75rem;
+    }
+  }
+
+}
+
+@media only screen and (max-width: 556px) {
+
+  @keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50% { transform: translate(0, 10px); }
+    100% { transform: translate(0, -0px); }    
+  }
+
+  .Home {
+    background-color: white; 
+    padding: 1rem 2rem;
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+    .home-buttons {
+
+      flex-direction: column;
+      row-gap: 0.1rem;
+      align-self: center;
+      align-items: cen hter;
+      justify-content: center;
+    }
   
+    .socials {
+      padding-top: 3%;  
+      .icons {
+        font-size: 3rem;
+      }
+    }
+
+    .welcome-container {
+      display: contents;
+
+      .floating-container {
+        padding-top: 2rem;
+        margin: 0px;
+        padding-right: 0px;
+      }
+
+      .home-title {
+        font-size: clamp(1.5rem, 1.5vw, 3rem);
+      }
+
+      .logo-home {
+        max-width: 110%;
+      }
+
+      .home-date {
+        font-size: clamp(2rem, 4vw, 4rem);
+        max-width: 800px;
+      }
+
+      .welcome-right-container {
+        align-items: center;
+        padding-right: 0;
+        padding-bottom: 4.5%;
+      }
+    }
+  }
+
+  .Button{
+    font-family: bitter;
+    height: clamp(3rem, 5vw, 7rem);
+  }
+
+  button:hover{ cursor: pointer; }
+
+  .Button-home {
+    width: clamp(13rem, 13rem, 20rem);
+  }
+  
+  .About{    
+    .logo-who-we-are{
+      max-width: 75%;
+    }
+  }
+
+  figure {
+    margin: 0 1.25em 1.25em 0;
+    position: relative;
+    text-align: center;
+    border: 0.5em solid #F07167;
+    border-radius: 0.5em;
+  }
+
+  figure:hover{
+    border: 0.5em solid #712020;
+    img {
+      opacity: 0.1;
+      transition: all .2s ease-in-out .2s;
+    }
+  }
+
+  .Button-sponsor-page{
+    background-color: rgb(255, 129, 120);
+    padding: 1rem 1rem;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    text-shadow: 0px 1px 0px #000;
+    filter: dropshadow(color=#000, offx=0px, offy=1px);
+    position: relative;
+    
+    -webkit-box-shadow:inset 0 1px 0 #ffcbcb, 0 10px 0 #441305;
+    /* -moz-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
+    box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b; */
+    
+    border-radius: 5px;
+    border-color: #712020;
+    border-style: solid;
+    border-width: 0.35vw;
+    display: flex;
+    width: clamp(9rem, 40vw, 40rem);
+    height: clamp(4rem, 6vw, 10rem);
+  }
+  .Button-sponsor-page div{
+    font-size: 0.8rem;
+  }
+
+
+  .Button-sponsor-page:hover{
+    top:10px;
+    background-color: rgb(255, 129, 120);
+    -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
   }
 }
 
-@media only screen and (max-width: 917px) {
+@media only screen and (max-width: 1200px) {
+  .About {
+    .collaborators-container{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      align-items: center;
+      gap: 1em;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+@media only screen and (max-width: 975px) {
+  .location-container{
+    display: flex;
+
+    .location-child-container{
+      flex:1;
+      text-align: left !important;
+      margin: 0px 0px !important;
+    }
+  }
+  .map iframe{
+    visibility: hidden;
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .members {
+    max-height: 300px;
+    overflow: scroll;
+  }
+  .committeeMembers-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: center;
+    gap: 1em;
+  }
+
   .navbar {
 
     /* move logo to center */
@@ -168,66 +411,9 @@
   .mlh-banner {
     display: none;
   }
-}
-
-@media only screen and (min-width: 1200px) {
-  .collaborators-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    align-items: center;
-    gap: 1em;
-    justify-content: center;
-    align-items: center;
-    padding: 10% 0rem;
-  }
-}
-
-@media only screen and (max-width: 1199px) {
-  .About {
-    .collaborators-container{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      align-items: center;
-      gap: 1em;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-}
-
-@media  only screen and (max-width: 975px) {
-  .location-container{
-    display: flex;
-
-    .location-child-container{
-      flex:1;
-      text-align: left !important;
-      margin: 0px 0px !important;
-    }
-  }
-  .map iframe{
-    visibility: hidden;
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .members {
-    max-height: 300px;
-    overflow: scroll;
-  }
-  .committeeMembers-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    align-items: center;
-    gap: 1em;
-  }
-
 
 }
+
 @media only screen and (max-width: 1000px) {
   .About {
     .who-we-are-container{
@@ -300,12 +486,9 @@
       justify-self: center;
       padding: 10%;
       margin-left: auto;
-      margin-right: auto;
-
-      
+      margin-right: auto; 
     }
-    
-
+  
     .apply {
       font-size: 1.8rem;
     }
@@ -327,172 +510,7 @@
     margin: 0;
     padding-top: 0;
   }
-}
 
-@media only screen and (max-width: 430px) {
-  .login-container {
-    .form-container {
-      .loginBubbles {
-        font-weight: 500;
-        font-size: 10px;
-      }
-    }
-  }
-
-  figure:hover{
-    border: 0.5em solid #712020;
-    img {
-      opacity: 0.1;
-      transition: all .2s ease-in-out .2s;
-    }
-    figcaption {
-      top: 50%;
-      margin-top: -5em;
-      font-size: 0.8rem;
-    }
-  
-    h3  {
-      font-size: 0.7rem;
-    }
-    h4 {
-      font-size: 0.5rem;
-    }
-  }
-
-  figcaption a {
-    border-radius: 1.25rem;
-    padding-top: 0.5em;
-    width: 90%;
-    height: 1.5rem;
-  }
-}
-
-@media only screen and (max-width: 556px) {
-
-  @keyframes floating {
-    0% { transform: translate(0,  0px); }
-    50% { transform: translate(0, 10px); }
-    100% { transform: translate(0, -0px); }    
-  }
-
-  .home-buttons {
-
-    flex-direction: column;
-    row-gap: 0.1rem;
-    align-self: center;
-    align-items: cen hter;
-    justify-content: center;
-  }
-
-  .socials {
-    padding-top: 3%;  
-    .icons {
-      font-size: 3rem;
-    }
-  }
-
-  .Home {
-    background-color: white; 
-    padding: 1rem 2rem;
-    border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-
-    .welcome-container {
-      display: contents;
-
-      .floating-container {
-        padding-top: 2rem;
-        margin: 0px;
-        padding-right: 0px;
-      }
-
-      .home-title {
-        font-size: clamp(1.5rem, 1.5vw, 3rem);
-      }
-
-      .logo-home {
-        max-width: 110%;
-      }
-
-      .home-date {
-        font-size: clamp(2rem, 4vw, 4rem);
-        max-width: 800px;
-      }
-
-      .welcome-right-container {
-        align-items: center;
-        padding-right: 0;
-        padding-bottom: 4.5%;
-      }
-    }
-  }
-
-  .Button{
-    font-family: bitter;
-    height: clamp(3rem, 5vw, 7rem);
-  }
-
-  button:hover{ cursor: pointer; }
-
-  .Button-home {
-    width: clamp(13rem, 13rem, 20rem);
-  }
-  
-  .About{    
-    .logo-who-we-are{
-      max-width: 75%;
-    }
-  }
-
-  figure {
-    margin: 0 1.25em 1.25em 0;
-    position: relative;
-    text-align: center;
-    border: 0.5em solid #F07167;
-    border-radius: 0.5em;
-  }
-
-  figure:hover{
-    border: 0.5em solid #712020;
-    img {
-      opacity: 0.1;
-      transition: all .2s ease-in-out .2s;
-    }
-  }
-
-  .Button-sponsor-page{
-    background-color: rgb(255, 129, 120);
-    padding: 1rem 1rem;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    text-shadow: 0px 1px 0px #000;
-    filter: dropshadow(color=#000, offx=0px, offy=1px);
-    position: relative;
-    
-    -webkit-box-shadow:inset 0 1px 0 #ffcbcb, 0 10px 0 #441305;
-    /* -moz-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
-    box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b; */
-    
-    border-radius: 5px;
-    border-color: #712020;
-    border-style: solid;
-    border-width: 0.35vw;
-    display: flex;
-    width: clamp(9rem, 40vw, 40rem);
-    height: clamp(4rem, 6vw, 10rem);
-  }
-  .Button-sponsor-page div{
-    font-size: 0.8rem;
-  }
-
-
-  .Button-sponsor-page:hover{
-    top:10px;
-    background-color: rgb(255, 129, 120);
-    -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
-  }
-}
-
-@media only screen and (max-width: 650px) {
   .countdown-text {
     font-size: 20px;
   }
@@ -501,34 +519,9 @@
     font-size: 20px;
   }
 
-}
-
-@media only screen and (max-width: 500px) {
-  .countdown-text {
-    font-size: 18px;
+  .footer-container {
+    margin-inline: 1rem;
   }
-
-  .countdown-item {
-    font-size: 18px;
-  }
-  .countdown-label {
-    font-size: 12px;
-  }
-
-}
-
-@media only screen and (max-width: 415px) {
-  .countdown-text {
-    font-size: 16px;
-  }
-
-  .countdown-item {
-    font-size: 16px;
-  }
-  .countdown-label {
-    font-size: 12px;
-  }
-
 }
 
 @media only screen and (max-width: 899px) {
