--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -5,7 +5,7 @@
   /* background-image: url(./components/pictures/Blue-Purple_background.png);
   background-attachment: fixed;
   background-position: center;  */
-  min-height: 95vh;
+  min-height: 100vh;
   height: 100%;
 
   padding-bottom: 0%;
@@ -420,6 +420,13 @@ button:hover{ cursor: pointer; }
     font-family: teacher-regular;
     font-size: clamp(0.5rem, 1rem, 1rem);
   }
+
+  .little-guy {
+    height: 100px;
+    position: absolute;
+    right: 20%;
+    margin-top: -8%
+  }
   
   .who-we-are-container{
     padding-top: 0;
@@ -434,6 +441,7 @@ button:hover{ cursor: pointer; }
       justify-items: center;
       align-items: center;
       padding-bottom: 0;
+      padding-top: 0%;
     }
       
     .logo-who-we-are{
@@ -787,6 +795,14 @@ figcaption a {
       align-self: center;
     } 
   }
+
+  .little-guy {
+    align-self: center;
+    width: 17%;
+    position: absolute;
+    right: 17%;
+    margin-top: -90px;
+  }
 }
 
 .Portal {
@@ -835,16 +851,16 @@ figcaption a {
 
 
     .character {
-      align-self: flex-end;
+      align-self: center;
       float: inline-end;
       display: flex;
       padding-bottom: 2%;
       padding-top: 2%;
-      padding-left: 10%;
+      padding-left: 5%;
       width: clamp(5rem, 10rem, 15rem);
       height: auto;
       margin-left: auto; 
-      margin-right: 0;
+      margin-right: 5%;
       animation-name: floating;
       animation-duration: 1s;
       animation-iteration-count: infinite;
@@ -930,6 +946,15 @@ figcaption a {
     display: flex;
     flex-direction: column;
     padding: 5%;
+
+
+    .little-guy {
+      height: 80px;
+
+      /* position: absolute;
+      margin-top: -35px;
+      margin-right: -30px; */
+    }
   }
 
   .modalContainer .title {
@@ -967,7 +992,7 @@ figcaption a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: clamp(2rem, 4rem, 5rem);
+    margin-top: clamp(1rem, 1.5rem, 2rem);
   }
 
   .apply {
@@ -1127,8 +1152,8 @@ figcaption a {
   font-size: 10px;
   text-align: center;
   padding: 2rem;
+  padding-top: 4rem;
   margin-inline: 5rem;
-  background-color: #f4f7ff;
   font-family: teacher-regular;
 
   .divider {
