--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -670,39 +670,55 @@ figcaption a {
   /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 7px; */
 }
 
-.sponsor-logo-container a:nth-child(odd) {
+.sponsor-logo-container a {
   width: 70%;
   height: 100px;
 }
 
-.sponsor-logo-container a:nth-child(even) {
-  width: 70%;
-  height: 100px;
 
-}
-
-.sponsor-logo-container img:nth-child(odd) {
-  width: 80%;
-  height: 150px;
-}
-
-.sponsor-logo-container img:nth-child(even) {
-  width: 80%;
-  height: 150px;
-
+.sponsor-logo-container img {
+  width: 90%;
+  height: 300px;
+  display: block;
+  margin: auto;
 }
 
 
-@media (max-width: 900px) {
+@media (max-width: 1050px) {
   .sponsor-logo-container {
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr 1fr;
     /* flex-direction: column;
     align-items: center;  */
+    grid-column-gap: 1rem;
+  }
+
+  .sponsor-logo-container a {
+    width: 80%;
   }
 
   .sponsor-logo-container img {
     padding: 1rem;
-    max-width: 60%;
+    max-width: 80%;
+    height: 300px;
+  }
+}
+
+@media (max-width: 650px) {
+  .sponsor-logo-container {
+    grid-template-columns: 1fr 1fr;
+    /* flex-direction: column;
+    align-items: center;  */
+    grid-column-gap: 1rem;
+  }
+
+  .sponsor-logo-container a {
+    width: 60%;
+    height: 50px;
+  }
+
+  .sponsor-logo-container img {
+    padding: 0;
+    width: 100%;
   }
 }
 
