--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1237,3 +1237,34 @@ figcaption a {
   }
 
 }
+
+.email-send-scroll {
+  /* width: 500px;  */
+  height: 500px;
+  overflow-x: auto;
+}
+
+table {
+  margin-top: 3rem;
+  border: 1px solid rgb(0, 0, 0);
+
+}
+
+tbody {
+  border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+th {
+  border-bottom: 1px solid rgb(5, 5, 5);
+  border-right: 1px solid rgb(6, 6, 6);
+  padding: 2px 4px;
+  text-align: left;
+}
+
+td {
+  border-bottom: 1px solid rgb(6, 6, 6);
+  border-right: 1px solid rgb(4, 4, 4);
+  padding: 2px 4px;
+}
+
+
