--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1238,33 +1238,159 @@ figcaption a {
 
 }
 
+/* Admin Portal JS */
 .email-send-scroll {
   width: 70%; 
   height: 500px;
   overflow-x: auto;
 }
 
-table {
+.email-send-scroll table {
   margin-top: 3rem;
   border: 1px solid rgb(0, 0, 0);
 
 }
 
-tbody {
+.email-send-scroll tbody {
   border-bottom: 1px solid rgb(0, 0, 0);
 }
 
-th {
+.email-send-scroll th {
   border-bottom: 1px solid rgb(5, 5, 5);
   border-right: 1px solid rgb(6, 6, 6);
   padding: 2px 4px;
   text-align: left;
 }
 
-td {
+.email-send-scroll td {
   border-bottom: 1px solid rgb(6, 6, 6);
   border-right: 1px solid rgb(4, 4, 4);
   padding: 2px 4px;
+}
+
+
+
+/* Schedule JS */
+.disclaimer {
+  font-size: 20px;
+}
+
+.tables-container {
+  /* putting contents of table side-by-side */
+  display: flex;
+  justify-content: space-around;
+}
+
+.backgroundSchedule {
+  background-color: rgba(0, 177, 196, 0.1);
+  border-radius: 10px;
+  width:45%;
+}
+
+table {
+  /* background color opacity changed but text of table remains visible */
+  opacity: 1; 
+  margin-left: 15px;
+  padding: 20px;
+  padding-bottom: 10px;
+}
+
+.locationEvent{
+  font-size: 12px;
+  color: purple;
+}
+
+.presenter {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.time {
+  /* controls spacing btwn time & event */
+  padding-right: 40px;
+}
+
+th {
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.time, .eventDescription, th {
+  /* controls the text being spaced evenly */
+  vertical-align: middle;
+  padding-bottom: 10px;
+}
+
+.content-all {
+  font-family: teacher-semibold;
+  margin-bottom: 0px;
+  border-bottom: 5px rgb(132, 132, 132) solid;
+  border-left: 4px rgb(132, 132, 132) solid;
+  border-right: 4px rgb(132, 132, 132) solid;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tab {
+  font-family: teacher-semibold;
+  font-size: 18px;
+  padding: 10px;
+  flex-grow: 1;
+  border-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.tab.active {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top: 4px rgb(132, 132, 132) solid;
+  border-left: 4px rgb(132, 132, 132) solid;
+  border-right: 4px rgb(132, 132, 132) solid;
+  border-bottom: 0px rgb(132, 132, 132) solid;
+}
+
+/* .tab:nth-child(1).active + .tab,
+.tab:nth-child(1).active + .tab + .tab {
+  border-bottom: 5px black solid; 
+}
+
+.tab:nth-child(2).active {
+  .tab:nth-child(1) {
+    border-bottom: 5px black solid; 
+  }
+} */
+
+.tab:nth-child(1):hover,
+.tab:nth-child(1).active {
+  background-color: #FFB4B0;
+}
+
+.tab:nth-child(2):hover,
+.tab:nth-child(2).active {
+  background-color: #FFFFD9;
+}
+
+.tab:nth-child(3):hover,
+.tab:nth-child(3).active {
+  background-color: rgb(211, 228, 255);
+}
+
+.tab:nth-child(1).active, .content1{
+  background-color: #ffc3c0
+}
+
+.tab:nth-child(2).active, .content2 {
+  background-color: #FFFFD9;
+}
+
+.tab:nth-child(3).active, .content3 {
+  background-color: rgb(211, 228, 255);
 }
 
 
