--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -126,6 +126,7 @@
     padding: 1rem 2rem;
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin: 0% 5% 3%;
 
     .home-buttons {
 
