--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1397,12 +1397,18 @@ th {
 .RSVP {
   margin-inline: 10%;
   /* background-color: black; */
+  
+
   #msform {
-    max-width: 650px;
-    margin: 50px 0 50px;
+    max-width: 700px;
+    margin: 7% auto;
     text-align: center;
     position: relative;
     z-index: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   #msform fieldset {
@@ -1410,10 +1416,10 @@ th {
     border: 0 none;
     border-radius: 3px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-    padding: 20px 30px;
+    padding: 7% 13%;
     box-sizing: border-box;
     width: 80%;
-    margin: 0 10%;
+    margin: 0 auto;
     
     /*stacking fieldsets above each other*/
     position: relative;
@@ -1422,105 +1428,148 @@ th {
   #msform fieldset:not(:first-of-type) {
     display: none;
   }
-}
 
+  .noDisplay {
+    display: none;
+  }
 
+  /*Hide all except first fieldset*/
 
-
-
-
-/*Hide all except first fieldset*/
-
-/*inputs*/
-#msform input, #msform textarea {
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  margin-bottom: 10px;
-  width: 100%;
-  box-sizing: border-box;
-  color: #2C3E50;
-  font-size: 13px;
-}
-/*buttons*/
-#msform .action-button {
-  width: 100px;
-  background: #00AFB9;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 1px;
-  cursor: pointer;
-  padding: 10px;
-  margin: 10px 5px;
-  text-decoration: none;
-  font-size: 14px;
-}
-#msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #00AFB9;
-}
-/*headings*/
-.fs-title {
-  font-size: 15px;
-  text-transform: uppercase;
-  color: #2C3E50;
-  margin-bottom: 10px;
-}
-.fs-subtitle {
-  font-weight: normal;
-  font-size: 13px;
-  color: #666;
-  margin-bottom: 20px;
-}
-/*progressbar*/
-#progressbar {
-  margin-bottom: 30px;
-  overflow: hidden;
-  /*CSS counters to number the steps*/
-  counter-reset: step;
-}
-#progressbar li {
-  list-style-type: none;
-  color: white;
-  text-transform: uppercase;
-  font-size: 9px;
-  width: 25%;
-  float: left;
-  position: relative;
-}
-#progressbar li:before {
-  content: counter(step);
-  counter-increment: step;
-  width: 20px;
-  line-height: 20px;
-  display: block;
-  font-size: 10px;
-  color: #333;
-  background: white;
-  border-radius: 3px;
-  margin: 0 auto 5px auto;
-}
-/*progressbar connectors*/
-#progressbar li:after {
-  content: '';
-  width: 100%;
-  height: 2px;
-  background: #666; /* progress bar */
-  position: absolute;
-  left: -50%;
-  top: 9px;
-  z-index: -1; /*put it behind the numbers*/
-}
-#progressbar li:first-child:after {
-  /*connector not needed before the first step*/
-  content: none; 
   
+  
+  /*inputs*/
+  #msform input, #msform textarea {
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    color: #2C3E50;
+    font-size: 13px;
+  }
+  #msform textarea {width: 100%;}
+
+
+  .mealPref {
+    display: flex;
+    flex-direction: column;
+    input {
+      width: 0%;
+    }
+  }
+  
+  .mealOption {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px; /* Adjust vertical spacing between options */
+  }
+  
+  .mealOption input{
+    margin-right: 20px; /* Adjust horizontal spacing between checkbox and label */
+    width: auto;
+    cursor: pointer;
+  }
+  
+  .mealOption label {
+    margin: 0; /* Reset margin to prevent the label from aligning to the right */
+    text-align: left;
+  }
+  .diet {
+    font-size: 0.8rem;
+    padding-bottom: 4%;
+  }
+
+  /*buttons*/
+  #msform .action-button {
+    width: 100px;
+    background: #00AFB9;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 1px;
+    cursor: pointer;
+    padding: 10px;
+    margin: 10px 5px;
+    text-decoration: none;
+    font-size: 14px;
+  }
+  #msform .action-button:hover, #msform .action-button:focus {
+    box-shadow: 0 0 0 2px white, 0 0 0 3px #00AFB9;
+  }
+  /*headings*/
+  .fs-title {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #2C3E50;
+    margin-bottom: 10px;
+  }
+
+  .congrats {
+    color: #00AFB9;
+    font-size: 2rem;
+  }
+
+  .fs-subtitle {
+    font-weight: normal;
+    font-size: 0.8rem;
+    color: #666;
+    margin-bottom: 20px;
+  }
+  /*progressbar*/
+  #progressbar {
+    margin-bottom: 30px;
+    overflow: hidden;
+    /*CSS counters to number the steps*/
+    counter-reset: step;
+    padding-left: 0;
+  }
+  #progressbar li {
+    list-style-type: none;
+    color: white;
+    text-transform: uppercase;
+    font-size: 9px;
+    width: 25%;
+    float: left;
+    position: relative;
+  }
+  #progressbar li:before {
+    content: counter(step);
+    counter-increment: step;
+    width: 20px;
+    line-height: 20px;
+    display: block;
+    font-size: 10px;
+    color: #333;
+    background: white;
+    border-radius: 3px;
+    margin: 0 auto 5px auto;
+  }
+  /*progressbar connectors*/
+  #progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #666; /* progress bar */
+    position: absolute;
+    left: -50%;
+    top: 9px;
+    z-index: -1; /*put it behind the numbers*/
+  }
+  #progressbar li:first-child:after {
+    /*connector not needed before the first step*/
+    content: none; 
+    
+  }
+  /*marking active/completed steps green*/
+  /*The number of the step and the connector before it = green*/
+  #progressbar li.active:before,  #progressbar li.active:after{
+    background: #00AFB9;
+    color: white;
+  }
+
 }
-/*marking active/completed steps green*/
-/*The number of the step and the connector before it = green*/
-#progressbar li.active:before,  #progressbar li.active:after{
-  background: #00AFB9;
-  color: white;
-}
+
+
+
 
 
