--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1400,7 +1400,7 @@ th {
   
 
   #msform {
-    max-width: 700px;
+    max-width: 725px;
     margin: 7% auto;
     text-align: center;
     position: relative;
@@ -1445,7 +1445,7 @@ th {
     margin-bottom: 10px;
     box-sizing: border-box;
     color: #2C3E50;
-    font-size: 13px;
+    font-size: 14px;
   }
   #msform textarea {width: 100%;}
 
@@ -1453,9 +1453,9 @@ th {
   .mealPref {
     display: flex;
     flex-direction: column;
-    input {
+    /* input {
       width: 0%;
-    }
+    } */
   }
   
   .mealOption {
@@ -1475,7 +1475,7 @@ th {
     text-align: left;
   }
   .diet {
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding-bottom: 4%;
   }
 
@@ -1498,7 +1498,7 @@ th {
   }
   /*headings*/
   .fs-title {
-    font-size: 15px;
+    font-size: 18px;
     text-transform: uppercase;
     color: #2C3E50;
     margin-bottom: 10px;
@@ -1511,7 +1511,7 @@ th {
 
   .fs-subtitle {
     font-weight: normal;
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: #666;
     margin-bottom: 20px;
   }
