Added action items to RSVP submission page

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1569,6 +1569,15 @@ th {
 
 }
 
+/* .action-items {
+
+  display: cen;
+  text-align: center;
+  margin: 0 auto; 
+  max-width: 10%;
+} */
+
+
 
 
 
