minor css edits to tags and attempt to make mobile friendly
Attempted to make it mobile friendly but was not successful. It would show three cards at a time. Would like to show one card a time instead.

--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -581,3 +581,28 @@
     max-width: 100%;
   }
 }
+
+@media (max-width: 768px) {
+  .carousel-item-container {
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    width: 80%; 
+  }
+
+  .card {
+    margin-bottom: 20px;
+  }
+
+  .card-img {
+    height: auto;
+    max-width: 100%; 
+  }
+}
+
+/* Media query for extra small devices (up to 576px) */
+@media (max-width: 576px) {
+  .card {
+    width: 100%;
+  }
+}
