--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1617,7 +1617,8 @@ th {
     background-color: #00AFB9;
     display: inline-block;
     color: #fff;
-    border: none; /* Remove border */
-    padding: 0.3rem 0.5rem; /* Add padding for better visibility */
-    border-radius: 30px; /* Add border-radius for rounded corners */
+    border: none; 
+    padding: 0.3rem 0.5rem; 
+    border-radius: 30px; 
+    margin-top: -1rem;
 }
