--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -728,7 +728,7 @@ figcaption a {
   padding-bottom: 0%;
 
   .faq-collapse-container {
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 550;
     border: none;
     background: rgb(211, 228, 255);
@@ -1581,6 +1581,148 @@ th {
   margin: 0 auto; 
   max-width: 10%;
 } */
+
+
+/* Schedule JS */
+.disclaimer {
+  font-size: 20px;
+}
+
+.tables-container {
+  /* putting contents of table side-by-side */
+  display: flex;
+  justify-content: space-around;
+}
+
+.backgroundSchedule {
+  background-color: rgba(0, 177, 196, 0.1);
+  border-radius: 10px;
+  width:45%;
+}
+
+table {
+  /* background color opacity changed but text of table remains visible */
+  opacity: 1; 
+  margin-left: 15px;
+  padding: 20px;
+  padding-bottom: 10px;
+}
+
+.location{
+  font-size: 12px;
+  color: purple;
+}
+
+.presenter {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.time {
+  /* controls spacing btwn time & event */
+  padding-right: 40px;
+}
+
+th {
+  font-style: italic;
+  text-decoration: underline;
+}
+
+/* .eventDetails {
+  display: flex;
+  flex-direction: column;
+} */
+
+.time, .eventDescription, .eventLocation,th {
+  /* controls the text being spaced evenly */
+  vertical-align: middle;
+  padding-bottom: 10px;
+  padding-right: 50px;
+}
+
+
+/* setting up font style & formation for fri-sun content */
+.content-all {
+  font-family: teacher-semibold;
+  margin-bottom: 0px;
+  border-bottom: 5px rgb(132, 132, 132) solid;
+  border-left: 4px rgb(132, 132, 132) solid;
+  border-right: 4px rgb(132, 132, 132) solid;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.formatPreSchedule {
+  font-family: teacher-semibold;
+  margin-bottom: 20px;
+  border-left: 4px rgb(132, 132, 132) solid;
+  border-bottom: 4px rgb(132, 132, 132) solid;
+  border-right: 4px rgb(132, 132, 132) solid;
+}
+
+.contentPreSchedule {
+  background-color: #ffcabb;
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tab {
+  color: black;
+  font-family: teacher-semibold;
+  font-size: 18px;
+  padding: 10px;
+  flex-grow: 1;
+  border-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.prescheduleTab{
+  width: 100%;
+  justify-content: center;
+  pointer-events: none;
+}
+
+.tab.active {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top: 4px rgb(132, 132, 132) solid;
+  border-left: 4px rgb(132, 132, 132) solid;
+  border-right: 4px rgb(132, 132, 132) solid;
+  border-bottom: 0px rgb(132, 132, 132) solid;
+}
+
+.tab:nth-child(1):hover,
+.tab:nth-child(1).active {
+  background-color: #FFB4B0;
+}
+
+.tab:nth-child(2):hover,
+.tab:nth-child(2).active {
+  background-color: #FFFFD9;
+}
+
+.tab:nth-child(3):hover,
+.tab:nth-child(3).active {
+  background-color: rgb(211, 228, 255);
+}
+
+.tab:nth-child(1).active, .content1{
+  background-color: #ffc3c0
+}
+
+.tab:nth-child(2).active, .content2 {
+  background-color: #FFFFD9;
+}
+
+.tab:nth-child(3).active, .content3 {
+  background-color: rgb(211, 228, 255);
+}
+
+
 
 
 
