--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1725,8 +1725,8 @@ th {
 .Awards{
   .product-image {
     width: 100%;
-    
-    min-height: 20rem;
+    /* min-height: 10rem; */
+    height: 15rem;
     padding: 1%;
     /* height: 20em; */
     object-fit: contain;
@@ -1735,7 +1735,7 @@ th {
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 320px;
-    height: 35rem;
+    height: 30rem;
     margin: 1rem 1rem;
     text-align: center;
   }
@@ -1750,7 +1750,7 @@ th {
   
   .description {
     color: grey;
-    font-size: 22px;
+    font-size: 20px;
     font-family: teacher-regular;
   }
   
