--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -225,8 +225,11 @@ button:hover{ cursor: pointer; }
   max-width: 600px;
 }
 
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 .Gallery {
-  
+  min-height: 60vh;
+  max-height: 60%;
 }
 
 .Home { 
