added all filter to committee section and removed orgs

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -452,7 +452,9 @@ button:hover{ cursor: pointer; }
     }
       
     .logo-who-we-are{
-      max-width: 75%;
+      width: 75%;
+      height: auto;
+      padding-left: 10%;
     }
   }
 
