--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -620,8 +620,6 @@ figcaption a {
   }
 }
 
-/*MARIA HOW TO MAKE HOVER COLOR STAY ON ACTIVE BUTTON*/
-
 .Button-sponsor-page{
   background-color: #ff8178;
   padding: 1rem 1rem;
@@ -639,8 +637,11 @@ figcaption a {
   border-style: solid;
   border-width: 0.35vw;
   display: flex;
-  width: clamp(9rem, 40vw, 40rem);
+  justify-content: center;
+  align-items: center;
+  width: clamp(9rem, 40vw, 30rem);
   height: clamp(4rem, 6vw, 10rem);
+  margin-top: 2%;
 }
 
 .Button-sponsor-page:hover{
@@ -650,22 +651,24 @@ figcaption a {
 }
 
 .sponsor-logo-container {
-  justify-items: center;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin-bottom: 1.5rem;
+  justify-content: center;
+  display: flex;
 }
 
-
 .sponsor-logo-container a {
-  max-width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
   max-height: 100%;
   background-color: white;
   object-fit: contain;
-  margin: 2% ;
+  margin-left: 2%;
+  margin-right: 2%;
   padding: 2rem;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 7px;
+  height: 70px;
 }
 
 .sponsor-logo-container img {
@@ -679,55 +682,23 @@ figcaption a {
   /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 7px; */
 }
 
-.sponsor-logo-container a {
-  width: 70%;
-  height: 100px;
-}
-
-
-.sponsor-logo-container img {
-  width: 90%;
-  height: 300px;
-  display: block;
-  margin: auto;
-}
-
-
 @media (max-width: 1050px) {
-  .sponsor-logo-container {
-    grid-template-columns: 1fr 1fr;
-    /* flex-direction: column;
-    align-items: center;  */
-    grid-column-gap: 1rem;
-  }
-
-  .sponsor-logo-container a {
-    width: 80%;
-  }
 
   .sponsor-logo-container img {
     padding: 1rem;
     max-width: 80%;
-    height: 300px;
   }
 }
 
 @media (max-width: 650px) {
-  .sponsor-logo-container {
-    grid-template-columns: 1fr 1fr;
-    /* flex-direction: column;
-    align-items: center;  */
-    grid-column-gap: 1rem;
-  }
 
   .sponsor-logo-container a {
-    width: 60%;
-    height: 50px;
+    height: 30px;
   }
 
   .sponsor-logo-container img {
     padding: 0;
-    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -1206,7 +1177,7 @@ figcaption a {
     justify-content: center;
 
     .image {
-      height: 5rem;
+      height: 8rem;
       align-self: center;
     }
 
