--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -658,8 +658,23 @@ figcaption a {
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
 
-.sponsor-logo-container {
+.sponsor-row {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 1%;
+}
+
+.sponsor-tier-container {
+  margin-right: 4%;
+  margin-left: 4%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sponsor-logo-container {
+  justify-content: space-around;
   display: flex;
 }
 
@@ -667,7 +682,8 @@ figcaption a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 20%;
+  width: 16vw;
+  flex: 1 1 calc(25% - 1rem);
   max-height: 100%;
   background-color: white;
   object-fit: contain;
@@ -676,37 +692,33 @@ figcaption a {
   padding: 2rem;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 7px;
-  height: 70px;
+  height: 8vh;
 }
 
 .sponsor-logo-container img {
   max-width: 80%;
   max-height: 100%;
-  /* background-color: white; */
   object-fit: contain;
-  /* margin: 2% ; */
-  /* padding: 2rem; */
-  /* border-radius: 15px; */
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 7px; */
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 600px) {
 
-  .sponsor-logo-container img {
-    padding: 1rem;
-    max-width: 80%;
+  .sponsor-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 1%;
   }
-}
-
-@media (max-width: 650px) {
 
   .sponsor-logo-container a {
-    height: 30px;
+    height: 6vh;
+    width: 25vw;
+    padding: 1rem;
   }
 
   .sponsor-logo-container img {
-    padding: 0;
     max-width: 100%;
+    max-height: 100%;
   }
 }
 
