--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -9,7 +9,7 @@
   }
 
   figure:hover{
-    border: 0.5em solid #712020;
+    border: 0.5em solid #7b7144;
     img {
       opacity: 0.1;
       transition: all .2s ease-in-out .2s;
@@ -189,12 +189,12 @@
     margin: 0 1.25em 1.25em 0;
     position: relative;
     text-align: center;
-    border: 0.5em solid #F07167;
+    border: 0.5em solid #cda95f;
     border-radius: 0.5em;
   }
 
   figure:hover{
-    border: 0.5em solid #712020;
+    border: 0.5em solid #7b7144;
     img {
       opacity: 0.1;
       transition: all .2s ease-in-out .2s;
@@ -319,7 +319,7 @@
       transition: 0.4s;
 
       .link {
-        color: #0081A7;
+        color: #4da99e;
         font-family: teacher-semibold;
         font-weight: bold;
         font-variant: small-caps;
@@ -333,7 +333,7 @@
         }
       .link:hover {
         cursor: pointer;
-        color: #2edaed;
+        color: #83ddcd;
         /* Change text color on hover (you can choose any color you like) */
       }
 
@@ -563,7 +563,7 @@
     }
   
     .congrats {
-      color: #00AFB9;
+      color: #4da99e;
       font-size: 1rem;
     }
   
