change name banner color

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -850,7 +850,7 @@ figcaption a {
   }
 
   .name-banner {
-    background-color:  #4da99e;
+    background-color:  #83ddcd;
     display: flex;
     flex: auto;
     border-top-left-radius: 25px;
