feat(ui): update gradient background
matches new theme now

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,7 +1,7 @@
 .app {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   /* background-color: #BFEBF4; */
-  background-image: linear-gradient(#24301f 40%, #e7faea);
+  background-image: linear-gradient(#a8cce4 40%, #000a82);
   /* background-image: url(./components/pictures/Blue-Purple_background.png);
   background-attachment: fixed;
   background-position: center;  */
